<resources>
    <string name="app_name">TicTacToe</string>

    <string name="homeTitle">Tic Tac Toe</string>
    <string name="playButton">Play</string>

    <string name="PlayerSetupTitle">Enter Your Name</string>
    <string name="Label1">Player1</string>
    <string name="Label2">Player2</string>
    <string name="submitButton">Submit Names</string>
    <string name="NameHint">Enter your Name</string>

    <string name="PlayAgainButton">Play Again</string>
    <string name="HomeButton">Home</string>
</resources>